nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.2.0
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: redash/nginx:latest
        name: nginx
        ports:
        - containerPort: 80
      restartPolicy: Always
