postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.2.0
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        io.kompose.service: postgres
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - static
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: type
                operator: In
                values:
                - static
      containers:
      - image: postgres:9.5.6-alpine
        name: postgres
        ports:
          - containerPort: 5432
