worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.2.0
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 2
  template:
    metadata:
      labels:
        io.kompose.service: worker
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - worker
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: type
                operator: In
                values:
                - worker
      containers:
      - args:
        - scheduler
        image: redash/redash:latest
        name: worker
