nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.2.0
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: nginx
