postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.2.0
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  ports:
  - name: postgres
    port: 5432
  selector:
    io.kompose.service: postgres
