redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.2.0
  labels:
    io.kompose.service: redis
  name: redis
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 6379
    targetPort: 0
  selector:
    io.kompose.service: redis
