server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.2.0
  labels:
    io.kompose.service: server
  name: redash
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    io.kompose.service: server
