worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.2.0
  labels:
    io.kompose.service: worker
  name: worker
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    io.kompose.service: worker
