ingress.yml
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redash
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: redash.<ingress details>
    http:
      paths:
      - backend:
          serviceName: redash
          servicePort: 5000
